--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,27 @@
   </properties>
 
   <dependencies>
-    <!-- MySQL connector -->
-    <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>6.0.5</version>
-    </dependency>
+      <!-- SQLite JDBC -->
+      <dependency>
+          <groupId>org.xerial</groupId>
+          <artifactId>sqlite-jdbc</artifactId>
+          <version>3.23.1</version>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/com.enigmabridge/hibernate4-sqlite-dialect -->
+      <dependency>
+          <groupId>com.enigmabridge</groupId>
+          <artifactId>hibernate4-sqlite-dialect</artifactId>
+          <version>0.1.2</version>
+      </dependency>
+
+
+      <!-- MySQL connector -->
+    <!--<dependency>-->
+      <!--<groupId>mysql</groupId>-->
+      <!--<artifactId>mysql-connector-java</artifactId>-->
+      <!--<version>6.0.5</version>-->
+    <!--</dependency>-->
     <!-- Hibernate 5.2.6 Final -->
     <dependency>
       <groupId>org.hibernate</groupId>
