--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 
   <dependencies>
       <!-- SQLite JDBC -->
-      <dependency>
-          <groupId>org.xerial</groupId>
-          <artifactId>sqlite-jdbc</artifactId>
-          <version>3.23.1</version>
-      </dependency>
+      <!--<dependency>-->
+          <!--<groupId>org.xerial</groupId>-->
+          <!--<artifactId>sqlite-jdbc</artifactId>-->
+          <!--<version>3.23.1</version>-->
+      <!--</dependency>-->
 
       <!-- https://mvnrepository.com/artifact/com.enigmabridge/hibernate4-sqlite-dialect -->
       <dependency>
